<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstl_upload_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px420"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_upload_head"
            android:layout_width="@dimen/px250"
            android:layout_height="@dimen/px250"
            android:layout_gravity="center"
            android:translationZ="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_upload_head_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_upload_head"
            android:textColor="@color/white"
            android:textSize="@dimen/px50"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_upload_head" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_login_q1"
        android:layout_width="@dimen/px500"
        android:layout_height="@dimen/px85"
        android:layout_marginTop="@dimen/px50"
        android:gravity="center_vertical"
        android:text="@string/str_login_q1"
        android:textColor="@color/white"
        android:textSize="@dimen/px50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cstl_upload_head" />

    <EditText
        android:id="@+id/et_login_q1"
        android:layout_width="@dimen/px500"
        android:layout_height="@dimen/px85"
        android:layout_marginTop="@dimen/px5"
        android:background="@drawable/round"
        android:gravity="center_vertical"
        android:hint="@string/str_username_hint"
        android:textColor="@color/ricewhite"
        android:textSize="@dimen/px40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_q1" />

    <TextView
        android:id="@+id/tv_login_q2"
        android:layout_width="@dimen/px500"
        android:layout_height="@dimen/px85"
        android:layout_marginTop="@dimen/px50"
        android:gravity="center_vertical"
        android:text="@string/str_login_q2"
        android:textColor="@color/white"
        android:textSize="@dimen/px50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_q1" />

    <EditText
        android:id="@+id/et_login_q2"
        android:layout_width="@dimen/px500"
        android:layout_height="@dimen/px85"
        android:layout_marginTop="@dimen/px5"
        android:background="@drawable/round"
        android:gravity="center_vertical"
        android:textColor="@color/backgroudpink"
        android:textSize="@dimen/px40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_q2" />

    <TextView
        android:id="@+id/tv_login_q3"
        android:layout_width="@dimen/px500"
        android:layout_height="@dimen/px85"
        android:layout_marginTop="@dimen/px50"
        android:gravity="center_vertical"
        android:text="@string/str_login_q3"
        android:textColor="@color/white"
        android:textSize="@dimen/px50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_q2" />


    <TextView
        android:id="@+id/tv_birthday"
        android:layout_width="@dimen/px500"
        android:layout_height="@dimen/px85"
        android:background="@drawable/round"
        android:textSize="@dimen/px50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_q3" />

    <Button
        android:id="@+id/btn_time_choose"
        android:layout_width="@dimen/px150"
        android:layout_height="@dimen/px85"
        android:background="@color/ricewhite"
        android:text="@string/str_btn_choose"
        android:textColor="@color/blue"
        android:textSize="@dimen/px40"
        app:layout_constraintLeft_toRightOf="@id/tv_birthday"
        app:layout_constraintTop_toBottomOf="@id/tv_login_q3" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/px250"
        android:layout_height="@dimen/px85"
        android:layout_marginTop="@dimen/px50"
        android:background="@color/ricewhite"
        android:text="@string/str_btn_choose"
        android:textColor="@color/blue"
        android:textSize="@dimen/px40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_time_choose" />

    <ProgressBar
        android:id="@+id/process_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px30"
        android:max="100"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_time_choose" />


</androidx.constraintlayout.widget.ConstraintLayout>